--- a/styles/globals.css
+++ b/styles/globals.css
@@ -17,6 +17,5 @@
 }
 
 body{
-  background: rgb(23,23,23);
-background: linear-gradient(145deg, rgba(23,23,23,1) 35%, rgba(19,18,18,1) 68%);
+  background-color: black;
 }
